hphp/hack/test/typecheck/super_constraint_9.php.exp
File "super_constraint_9.php", line 12, characters 16-17:
Some type constraint(s) here are violated (Typing[4110])
File "super_constraint_9.php", line 6, characters 63-65:
'Tk2' is a constrained type
File "super_constraint_9.php", line 6, characters 17-19:
This is an int
File "super_constraint_9.php", line 12, characters 16-17:
It was implicitly typed as an int during this operation
File "super_constraint_9.php", line 6, characters 12-14:
It is incompatible with a string
File "super_constraint_9.php", line 12, characters 12-13:
It was implicitly typed as a string during this operation
